--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -3,7 +3,7 @@
     margin: 0 auto;
     position: absolute;
     padding: 2%;
-    top: 10%;
+    top: 5%;
     left: 50%;
     transform: translate(-50%);
     width: 40%;
@@ -145,7 +145,7 @@ input[type="file"] {
 }
 
 .form-group .btn-sub {
-    background-color: #6fc3c7;
+    background-color: #6fc3c7c2;
     border-radius: 5px;
     border-bottom: none;
     color: #ebf1ef;
