--- a/src/components/Error/Error.css
+++ b/src/components/Error/Error.css
@@ -3,7 +3,7 @@
     bottom: -10%;
     left: 50%;
     transform: translate(-50%);
-    background-color: aliceblue;
+    background-color: transparent;
     width: fit-content;
     padding: 5px 10px;
     border-radius: 5px;
